# ros-cga-kinematics

./: CMakeLists.txt  package.xml
config/: controllers.yaml  default.rviz  dependent_joints.yaml  loops.yaml  rqt_control.perspective
include/cga/: cga.h
include/cga_fk/: cga.h
include/constraint/: constraint.h  delta.h  parallel.h
launch/: delta_fk.launch  delta_ik.launch  gazebo.launch  gazebo_control.launch  gazebo_spawn.launch  gazebo_start.launch  main.launch  spawn_model.launch
model/: delta.urdf.xacro  delta_base.urdf.xacro  delta_end_effector.urdf.xacro  delta_lower.urdf.xacro  delta_lower_virtual.urdf.xacro  delta_upper.urdf.xacro  inertia.urdf.xacro  materials.urdf.xacro  parameters.urdf.xacro
model/delta/: gazebo.sdf.xacro  gazebo.urdf.xacro  parameters.xacro  ros.urdf.xacro
model/delta/gazebo_joints/: end_effector.sdf.xacro  lower.urdf.xacro  upper.sdf.xacro  upper.urdf.xacro
model/delta/gazebo_links/: base.sdf.xacro  end_effector.sdf.xacro  lower.sdf.xacro  upper.sdf.xacro
model/delta/links/: base.urdf.xacro  lower.urdf.xacro  upper.urdf.xacro
model/delta/ros_joints/: upper.urdf.xacro
model/macros/: inertia.xacro
src/: delta_state_publisher.cpp
src/cga_fk/: main.cpp
src/constraint/: delta.cpp  parallel.cpp
src/delta_ik/: main.cpp
src/loop_fk/: main.cpp
