<?xml version="1.0"?>
<package format="2">
    <name>cga_kinematics</name>
    <version>0.0.0</version>
    <description>The cga_kinematics package</description>

    <maintainer email="zach@todo.todo">zach</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>urdf</build_depend>
    <build_depend>gazebo_ros</build_depend>
    <build_export_depend>gazebo_ros</build_export_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>

</package>
